# the-originals-test-task

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
app/: main.py
app/api/exceptions/: task.py
app/api/schemas/: task.py  token.py  user.py
app/api/v1/: task.py  user.py
app/db/: config.py  database.py  main.py
app/db/alembic/: env.py
app/db/alembic/versions/: 2024_09_18_0858-e8b3e57515c8_create_user_task_and_task_assignee_.py
app/db/common/: enums.py
app/db/models/: __init__.py  associations.py  base.py  task.py  user.py
app/repositories/: task.py  user.py
app/services/: auth.py  email.py  task.py  user.py
app/services/exceptions/: task.py  user.py
app/settings/: config.py
