[tool.poetry]
name = "the-originals-test-task"
version = "0.1.0"
description = ""
authors = ["ArhipKokocan <hts1345hjyuhip228888@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
